# RacingGame

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Engine/: CMakeLists.txt
Engine/src/Core/: Application.cpp  Application.h  EntryPoint.h
Engine/src/Renderer/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  StateStream.cpp  StateStream.h  TrackRenderer.cpp  TrackRenderer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Engine/src/UI/: ImGuiLayer.cpp  ImGuiLayer.h
Engine/src/Window/: Window.cpp  Window.h
Game/: CMakeLists.txt
Game/Assets/: resources.cfg
Game/Assets/Events/: Events.json
Game/Assets/Palettes/: colorblind.json  primary.json
Game/Assets/Shaders/: Shader.frag  Shader.vert  Simple.frag  Simple.vert
Game/Assets/Tracks/: SampleTrack.json  SampleTrack.txt
Game/src/: Game.cpp  GameLayer.cpp  GameLayer.h
Game/src/Controller/: PurePursuit.cpp  PurePursuit.h  RaceController.cpp  RaceController.h
Game/src/Core/: Car.cpp  Car.h  Circuit.cpp  Circuit.h  Contract.cpp  Contract.h  DevelopmentManager.cpp  DevelopmentManager.h  Driver.cpp  Driver.h  EventBus.cpp  EventBus.h  FinanceManager.cpp  FinanceManager.h  PaletteManager.cpp  PaletteManager.h  Race.cpp  Race.h  RaceConfiguration.cpp  RaceConfiguration.h  RaceEventManager.cpp  RaceEventManager.h  RaceSimimulation.cpp  RaceSimimulation.h  RaceSimulation.cpp  RaceSimulation.h  RaceState.h  Replay.cpp  Replay.h  Season.cpp  Season.h  SessionManager.cpp  SessionManager.h  StrategyPlanner.cpp  StrategyPlanner.h  Team.cpp  Team.h  Track.cpp  Track.h  TyreModel.cpp  (+3 more)
Game/src/Core/Tests/: CarTests.cpp  CircuitTests.cpp  DriverModifiersTests.cpp  SessionManagerTests.cpp  StrategyPlannerTests.cpp
Game/src/Panels/: CarInspectorPanel.cpp  CarInspectorPanel.h  FlagPanel.cpp  FlagPanel.h  LeaderboardPanel.cpp  LeaderboardPanel.h  RaceDashboard.cpp  RaceDashboard.h  RaceDashboardPanel.cpp  RaceDashboardPanel.h  TimingTowerPanel.cpp  TimingTowerPanel.h
Game/src/Userinterface/: DriverInfoPanel.cpp  DriverInfoPanel.h  HUD.cpp  HUD.h  PitCrewPanel.cpp  PitCrewPanel.h  RaceViewPanel.cpp  RaceViewPanel.h  StandingsPanel.cpp  StandingsPanel.h  UIManager.cpp  UIManager.h  UIState.h
Trinity/: CMakeLists.txt
Trinity/src/: Trinity.h  trpch.h
Trinity/src/Trinity/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h  Window.cpp  Window.h
Trinity/src/Trinity/Renderer/: Renderer.cpp  Renderer.h
Trinity/src/Trinity/Utilities/: FileManagement.h
Trinity/src/Trinity/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanSwapchain.cpp  VulkanSwapchain.h
